--- a/webserver/files/static_index.html
+++ b/webserver/files/static_index.html
@@ -1,12 +1,18 @@
-Big Data Center of Excellence
-Chennai – Big Data – Hadoop Architecture Weekends Training Starts June 4, 2016 Sat @ 2:30pm 
-Chennai – R Analytics – Weekends Training Starts May 29 (Sun @ 4:30pm) 
-Chennai – 5 Days Big Data – Hadoop Architecture FastTrack Training Starts June 6-10, 2016
-Call: +91 9789968765 / 044 – 42645495
-email: info@bigdatatraining.in
-Bangalore 3 Days Docker & Kubernetes Training Starts June 3-5, 2016 Register Now 
-Chennai Weekends Big Data Analytics Training in ChennaiStarts on June 4, 2016 Contact
- Learn anything under Big Data, Devops & Cloud – Talk to our Big Data Expert Team, Enroll, Work on a Proof of Concept Project.
-Big Data Training Chennai Developer / Architect / Admin Training Programs!
+<!DOCTYPE html>
 
 
+<html>
+
+	<head>
+	    <title>Hello, world</title>
+	    <link rel="stylesheet" href="/style.css">
+	    <script src="/script.js"></script>
+	</head>
+
+	<body>
+	    <h1>Hello, world</h1>
+	    <button onclick="fetchMessage()">Fetch Message</button>
+	    <p id="message">Click on the button to fetch the message.</p>
+	</body>
+
+</html>
